--- a/sportAppAPI.yaml
+++ b/sportAppAPI.yaml
@@ -331,6 +331,31 @@ paths:
         500:
           description: Server Error
   
+  /api/event/{id}:
+    get:
+      tags:
+      - event
+      description: | 
+        Gets an event by it's id
+      produces:
+      - application/json
+      parameters:
+      - in: path
+        name: id
+        required: true
+        type: number
+      responses:
+        200:
+          description: Result
+          schema:
+            $ref: '#/definitions/Event'
+        400:
+          description: ID not found
+        401:
+          description: Unauthorized
+        500:
+          description: Server Error
+  
   /api/event/new:
     post:
       tags:
@@ -417,7 +442,23 @@ paths:
           description: Unauthorized
         500:
           description: Server error
-      
+  
+  /api/event/old:
+    delete:
+      tags:
+      - event
+      description: |
+        Deletes every expired events from database. Admin access level required.
+      responses:
+        200:
+          description: Deleted
+        401:
+          description: Unauthorized
+        403:
+          description: Access denied
+        500:
+          description: Server error
+
 definitions:
   User:
     type: object
